log
Thu Mar 26 06:58:35 PM UTC 2026: 
 list.c | 75 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 69 insertions(+), 6 deletions(-)
 tests:  12|0
total_score: 60/60
a909855
Thu Mar 26 07:01:23 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
38a6e17
Thu Mar 26 07:05:13 PM UTC 2026: 
 list.c | 75 ++++++------------------------------------------------------------
 1 file changed, 6 insertions(+), 69 deletions(-)
 tests:  0|6
total_score: 0/60
5b7aee6
Thu Mar 26 07:20:25 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
9353a89
Thu Mar 26 07:22:28 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
4ec1f83
Thu Mar 26 07:23:53 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
de66514
Thu Mar 26 07:24:59 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
35a3409
Thu Mar 26 07:37:45 PM UTC 2026: 
 list.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:93:53: error: ‘next’ undeclared (first use in this function)
   93 |     if(list->current->prev == NULL && list->current-next != NULL) {
      |                                                     ^~~~
list.c:93:53: note: each undeclared identifier is reported only once for each function it appears in
1fc0cda
Thu Mar 26 07:38:17 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:99:53: error: ‘next’ undeclared (first use in this function)
   99 |     if(list->current->prev != NULL && list->current-next != NULL) {
      |                                                     ^~~~
list.c:99:53: note: each undeclared identifier is reported only once for each function it appears in
099170b
Thu Mar 26 07:38:31 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
53b46dd
Thu Mar 26 07:41:11 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/60
b25eee2
Thu Mar 26 07:42:14 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/60
f5f902f
Thu Mar 26 07:45:04 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/60
fc3f730
Thu Mar 26 07:45:21 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
07f41ca
Thu Mar 26 07:46:24 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
a50c6a6
Thu Mar 26 07:52:41 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
bde527b
